# grade_checker

./: .gitignore  README.md  cloc-repo.sh  config.py  grade_checker.py  main.ps1  main.py  requirements.txt  setup.sh  test.py  trim-repo.sh  unit-tests.py
core/: build.py  fetch.py  file_processor.py  grader.py  reporter.py  reporter2.py  script_runner.py  shell.py  spreadsheet.py
milestones/: _milestone1-hugh.json  _milestone1.json  _milestone2-hugh.json  _milestone2.json  _milestone3-hugh.json  _milestone3-joe.json  _milestone3.json  _milestone4-hugh.json  _milestone5-hugh.json
milestones/joe/: _milestone1-joe.json  _milestone2-joe.json  _milestone4-joe.json
milestones/old/: _milestone2.json.bak
old/: main-v2.py  main-v3.py
res/: CMakeLists.txt
scripts/: build-script.sh  check-ec.sh  check-for.sh  check-static.sh  check-stl.sh  cleanup-m1.sh  dist-file.sh  find-cpp.sh  find-hpp.sh  find_cpp.sh  git-log.sh  grade-quick-v2-inprog.sh  reconstruct.sh  replace-space.sh  rm-non-late.sh  run-grade-quick.sh
scripts/cmake/m1/: CMakeLists.txt  CMakeLists_winclude.txt
scripts/old/: build-script.sh  find-cpp (copy 3).sh  find-cpp (copy 4).sh  find_cpp.sh  find_hpp.sh  grade-quick-single.sh  grade-quick.sh
tests/smoke/: HashTable.cpp
tests/unit/: \  build_unit.py  file_processor_unit.py  grader_unit.py  reporter_unit.py  run.py  shell_unit.py  util_unit.py
tools/: util.py
